# MyPortifolio

./: 01_Home.py  Readme.md  pyproject.toml
Config/: about.yml  skill.yml
assets/: Juan Gonçalves Martins..docx
pages/: 02_Blog.py
pages/styles/: main.css
styles/: main.css
